--- a/apps/deploy-apps-of-apps/Chart.yaml
+++ b/apps/deploy-apps-of-apps/Chart.yaml
@@ -4,3 +4,8 @@ description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
+
+dependencies:
+- name: app-of-apps
+  version: "0.1.0"
+  repository: "file://../app-of-apps"
