--- a/apps/deploy-apps-of-apps/openshift/deploy-apps-of-apps/templates/application.yaml
+++ b/apps/deploy-apps-of-apps/openshift/deploy-apps-of-apps/templates/application.yaml
@@ -6,7 +6,7 @@ metadata:
   name: app-of-apps-1 
   namespace: gitops-test
   labels:
-    app.kubernetes.io/id: '30565'
+    app.kubernetes.io/id: '31466'
 spec:
   destination:
     server: 'https://kubernetes.default.svc'
@@ -14,8 +14,8 @@ spec:
   source:
     helm: 
       parameters:
-        - name: set
-          value: "1"
+        - name: amount
+          value: "1"       
     path: .
     repoURL: 'https://github.com/romerobu/app-of-apps' 
     targetRevision: main # branch according to amount of apps per repo
@@ -31,7 +31,7 @@ metadata:
   name: app-of-apps-2 
   namespace: gitops-test
   labels:
-    app.kubernetes.io/id: '30565'
+    app.kubernetes.io/id: '31466'
 spec:
   destination:
     server: 'https://kubernetes.default.svc'
@@ -39,8 +39,8 @@ spec:
   source:
     helm: 
       parameters:
-        - name: set
-          value: "2"
+        - name: amount
+          value: "2"       
     path: .
     repoURL: 'https://github.com/romerobu/app-of-apps' 
     targetRevision: main # branch according to amount of apps per repo
@@ -56,7 +56,7 @@ metadata:
   name: app-of-apps-3 
   namespace: gitops-test
   labels:
-    app.kubernetes.io/id: '30565'
+    app.kubernetes.io/id: '31466'
 spec:
   destination:
     server: 'https://kubernetes.default.svc'
@@ -64,183 +64,8 @@ spec:
   source:
     helm: 
       parameters:
-        - name: set
-          value: "3"
-    path: .
-    repoURL: 'https://github.com/romerobu/app-of-apps' 
-    targetRevision: main # branch according to amount of apps per repo
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-# Source: deploy-apps-of-apps/templates/application.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: app-of-apps-4 
-  namespace: gitops-test
-  labels:
-    app.kubernetes.io/id: '30565'
-spec:
-  destination:
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    helm: 
-      parameters:
-        - name: set
-          value: "4"
-    path: .
-    repoURL: 'https://github.com/romerobu/app-of-apps' 
-    targetRevision: main # branch according to amount of apps per repo
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-# Source: deploy-apps-of-apps/templates/application.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: app-of-apps-5 
-  namespace: gitops-test
-  labels:
-    app.kubernetes.io/id: '30565'
-spec:
-  destination:
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    helm: 
-      parameters:
-        - name: set
-          value: "5"
-    path: .
-    repoURL: 'https://github.com/romerobu/app-of-apps' 
-    targetRevision: main # branch according to amount of apps per repo
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-# Source: deploy-apps-of-apps/templates/application.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: app-of-apps-6 
-  namespace: gitops-test
-  labels:
-    app.kubernetes.io/id: '30565'
-spec:
-  destination:
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    helm: 
-      parameters:
-        - name: set
-          value: "6"
-    path: .
-    repoURL: 'https://github.com/romerobu/app-of-apps' 
-    targetRevision: main # branch according to amount of apps per repo
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-# Source: deploy-apps-of-apps/templates/application.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: app-of-apps-7 
-  namespace: gitops-test
-  labels:
-    app.kubernetes.io/id: '30565'
-spec:
-  destination:
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    helm: 
-      parameters:
-        - name: set
-          value: "7"
-    path: .
-    repoURL: 'https://github.com/romerobu/app-of-apps' 
-    targetRevision: main # branch according to amount of apps per repo
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-# Source: deploy-apps-of-apps/templates/application.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: app-of-apps-8 
-  namespace: gitops-test
-  labels:
-    app.kubernetes.io/id: '30565'
-spec:
-  destination:
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    helm: 
-      parameters:
-        - name: set
-          value: "8"
-    path: .
-    repoURL: 'https://github.com/romerobu/app-of-apps' 
-    targetRevision: main # branch according to amount of apps per repo
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-# Source: deploy-apps-of-apps/templates/application.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: app-of-apps-9 
-  namespace: gitops-test
-  labels:
-    app.kubernetes.io/id: '30565'
-spec:
-  destination:
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    helm: 
-      parameters:
-        - name: set
-          value: "9"
-    path: .
-    repoURL: 'https://github.com/romerobu/app-of-apps' 
-    targetRevision: main # branch according to amount of apps per repo
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-# Source: deploy-apps-of-apps/templates/application.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: app-of-apps-10 
-  namespace: gitops-test
-  labels:
-    app.kubernetes.io/id: '30565'
-spec:
-  destination:
-    server: 'https://kubernetes.default.svc'
-  project: default
-  source:
-    helm: 
-      parameters:
-        - name: set
-          value: "10"
+        - name: amount
+          value: "3"       
     path: .
     repoURL: 'https://github.com/romerobu/app-of-apps' 
     targetRevision: main # branch according to amount of apps per repo
